[package]
name = "serpanok"
version = "0.1.0"
authors = ["Andriy Symonovych on lilac <sima.rv@gmail.com>"]
edition = "2018"

[dependencies]
futures-preview = "0.3.0-alpha.19"
tokio = "0.2.0-alpha.6"
chrono = {version = "0.4", features = ["serde"]}
itertools = "0.8"
nom = "4"
bzip2 = "0.3"
either = "1.5"
lazy_static = "1.4"
hyper = {version = "0.13.0-alpha.4", features = ["unstable-stream"]}
hyper-tls = "0.4.0-alpha.4"
url = "2.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
regex = "1.3"
