[package]
name = "serpanok"
version = "0.1.0"
authors = ["Andriy Symonovych on lilac <sima.rv@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.3"
tokio = {version = "0.2", features = ["stream"]}
chrono = {version = "0.4", features = ["serde"]}
chrono-tz = "0.5"
tz-search = "0.1"
itertools = "0.8"
nom = "4"
bzip2 = "0.3"
either = "1.5"
lazy_static = "1.4"
hyper = "0.13"
hyper-tls = "0.4"
url = "2.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
regex = "1.3"
clap = "2.33"
