[package]
name = "serpanok"
version = "0.1.0"
authors = ["Andriy Symonovych on lilac <sima.rv@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.3"
tokio = {version = "1.2", features = ["rt-multi-thread"]}
tokio-stream = "0.1"
chrono = {version = "0.4", features = ["serde"]}
chrono-tz = "0.6"
tz-search = "0.1"
itertools = "0.10"
nom = "4"
bzip2 = "0.4"
either = "1.5"
lazy_static = "1.4"
hyper = {version = "0.14", features = ["server", "client", "http1", "stream"]}
hyper-tls = "0.5"
url = "2.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
regex = "1.3"
clap = "3.1"
bitflags = "1.2"
select = "0.5"
plotters = {version = "0.3", default_features = false, features = ["bitmap_backend", "bitmap_encoder", "line_series", "datetime", "chrono"]}
rusqlite = {version = "0.28", features = ["bundled"]}
